--- a/apps/app-k-maps/src/app/app.component.html
+++ b/apps/app-k-maps/src/app/app.component.html
@@ -1,3 +1,35 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main" type="overlay">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item-divider>Dashboard</ion-item-divider>
+        <ion-item routerLink="/tabs/tab1" routerDirection="root">Home</ion-item>
+
+        <ion-item-divider>Arabic</ion-item-divider>
+        <ion-item disabled="true">Lessons</ion-item>
+        <ion-item routerLink="/tabs/arabic-roots" routerDirection="forward">Roots</ion-item>
+        <ion-item disabled="true">Lexicon</ion-item>
+        <ion-item disabled="true">Memory</ion-item>
+
+        <ion-item-divider>Worldview</ion-item-divider>
+        <ion-item disabled="true">Lessons</ion-item>
+
+        <ion-item-divider>Crossref</ion-item-divider>
+        <ion-item disabled="true">Cross References</ion-item>
+
+        <ion-item-divider>Podcast</ion-item-divider>
+        <ion-item disabled="true">Episodes</ion-item>
+
+        <ion-item-divider>Planner</ion-item-divider>
+        <ion-item disabled="true">Weekly Plan</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
