--- a/apps/app-k-maps/src/app/core/tabs/tabs.page.html
+++ b/apps/app-k-maps/src/app/core/tabs/tabs.page.html
@@ -2,6 +2,11 @@
   <ion-router-outlet></ion-router-outlet>
 
   <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="arabic-roots" href="/tabs/arabic-roots">
+      <ion-icon aria-hidden="true" name="book-outline"></ion-icon>
+      <ion-label>Arabic</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab1" href="/tabs/tab1">
       <ion-icon aria-hidden="true" name="triangle"></ion-icon>
       <ion-label>Tab 1</ion-label>
