--- a/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
+++ b/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
@@ -29,7 +29,7 @@
               [queryParams]="{ tab: 'reading' }"
               queryParamsHandling="merge"
             >
-              Reading
+              <img class="header-tab-icon" src="assets/images/app-icons/reading.svg" alt="Reading" />
             </a>
           </li>
           <li class="nav-item">
@@ -40,7 +40,7 @@
               [queryParams]="{ tab: 'memory' }"
               queryParamsHandling="merge"
             >
-              Memory Recall
+              <img class="header-tab-icon" src="assets/images/app-icons/memory-recall.svg" alt="Memory Recall" />
             </a>
           </li>
           <li class="nav-item">
@@ -51,7 +51,7 @@
               [queryParams]="{ tab: 'mcq' }"
               queryParamsHandling="merge"
             >
-              MCQs (Verbs/Nouns)
+              <img class="header-tab-icon" src="assets/images/app-icons/mcqs.svg" alt="MCQs" />
             </a>
           </li>
           <li class="nav-item">
@@ -62,7 +62,7 @@
               [queryParams]="{ tab: 'passage' }"
               queryParamsHandling="merge"
             >
-              Passage Questions
+              <img class="header-tab-icon" src="assets/images/app-icons/passage-questions.svg" alt="Passage Questions" />
             </a>
           </li>
         </ul>
