--- a/apps/app-k-maps/src/app/app.component.html
+++ b/apps/app-k-maps/src/app/app.component.html
@@ -8,25 +8,52 @@
     <ion-content>
       <ion-list>
         <ion-item-divider>Dashboard</ion-item-divider>
-        <ion-item routerLink="/dashboard" routerDirection="root">Home</ion-item>
+        <ion-item routerLink="/dashboard" routerDirection="root">
+          <ion-icon name="home-outline" slot="start"></ion-icon>
+          Home
+        </ion-item>
 
         <ion-item-divider>Arabic</ion-item-divider>
-        <ion-item routerLink="/arabic/lessons" routerDirection="forward">Lessons</ion-item>
-        <ion-item routerLink="/arabic/roots" routerDirection="forward">Roots</ion-item>
-        <ion-item routerLink="/arabic/lexicon" routerDirection="forward">Lexicon</ion-item>
-        <ion-item routerLink="/arabic/memory" routerDirection="forward">Memory</ion-item>
+        <ion-item routerLink="/arabic/lessons" routerDirection="forward">
+          <ion-icon name="book-outline" slot="start"></ion-icon>
+          Lessons
+        </ion-item>
+        <ion-item routerLink="/arabic/roots" routerDirection="forward">
+          <ion-icon name="leaf-outline" slot="start"></ion-icon>
+          Roots
+        </ion-item>
+        <ion-item routerLink="/arabic/lexicon" routerDirection="forward">
+          <ion-icon name="library-outline" slot="start"></ion-icon>
+          Lexicon
+        </ion-item>
+        <ion-item routerLink="/arabic/memory" routerDirection="forward">
+          <ion-icon name="sparkles-outline" slot="start"></ion-icon>
+          Memory
+        </ion-item>
 
         <ion-item-divider>Worldview</ion-item-divider>
-        <ion-item routerLink="/worldview/lessons" routerDirection="forward">Lessons</ion-item>
+        <ion-item routerLink="/worldview/lessons" routerDirection="forward">
+          <ion-icon name="globe-outline" slot="start"></ion-icon>
+          Lessons
+        </ion-item>
 
         <ion-item-divider>Crossref</ion-item-divider>
-        <ion-item routerLink="/crossref" routerDirection="forward">Cross References</ion-item>
+        <ion-item routerLink="/crossref" routerDirection="forward">
+          <ion-icon name="git-compare-outline" slot="start"></ion-icon>
+          Cross References
+        </ion-item>
 
         <ion-item-divider>Podcast</ion-item-divider>
-        <ion-item routerLink="/podcast" routerDirection="forward">Episodes</ion-item>
+        <ion-item routerLink="/podcast" routerDirection="forward">
+          <ion-icon name="mic-outline" slot="start"></ion-icon>
+          Episodes
+        </ion-item>
 
         <ion-item-divider>Planner</ion-item-divider>
-        <ion-item routerLink="/planner" routerDirection="forward">Weekly Plan</ion-item>
+        <ion-item routerLink="/planner" routerDirection="forward">
+          <ion-icon name="calendar-outline" slot="start"></ion-icon>
+          Weekly Plan
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
