--- a/apps/app-k-maps/src/app/features/crossref/crossref.page.html
+++ b/apps/app-k-maps/src/app/features/crossref/crossref.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Cross References</ion-title>
   </ion-toolbar>
 </ion-header>
