--- a/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
+++ b/apps/k-maps/src/app/core/layout/default-layout/default-header/default-header.component.html
@@ -29,7 +29,7 @@
               [queryParams]="{ tab: 'reading' }"
               queryParamsHandling="merge"
             >
-              <img class="header-tab-icon" src="assets/images/app-icons/reading.svg" alt="Reading" />
+              <span class="header-tab-icon icon-reading" aria-hidden="true"></span>
             </a>
           </li>
           <li class="nav-item">
@@ -40,7 +40,7 @@
               [queryParams]="{ tab: 'memory' }"
               queryParamsHandling="merge"
             >
-              <img class="header-tab-icon" src="assets/images/app-icons/memory-recall.svg" alt="Memory Recall" />
+              <span class="header-tab-icon icon-memory" aria-hidden="true"></span>
             </a>
           </li>
           <li class="nav-item">
@@ -51,7 +51,7 @@
               [queryParams]="{ tab: 'mcq' }"
               queryParamsHandling="merge"
             >
-              <img class="header-tab-icon" src="assets/images/app-icons/mcqs.svg" alt="MCQs" />
+              <span class="header-tab-icon icon-mcqs" aria-hidden="true"></span>
             </a>
           </li>
           <li class="nav-item">
@@ -62,7 +62,7 @@
               [queryParams]="{ tab: 'passage' }"
               queryParamsHandling="merge"
             >
-              <img class="header-tab-icon" src="assets/images/app-icons/passage-questions.svg" alt="Passage Questions" />
+              <span class="header-tab-icon icon-passage" aria-hidden="true"></span>
             </a>
           </li>
         </ul>
