--- a/apps/app-k-maps/src/app/app.component.html
+++ b/apps/app-k-maps/src/app/app.component.html
@@ -1,97 +1,4 @@
 <ion-app>
-  <ion-menu contentId="main" type="overlay">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content>
-      <ion-list>
-        <ion-item routerLink="/dashboard" routerDirection="root">
-          <ion-icon name="home-outline" slot="start"></ion-icon>
-        </ion-item>
-      </ion-list>
-
-      <ion-accordion-group>
-        <ion-accordion value="arabic">
-          <ion-item slot="header">
-            <ion-icon name="book-outline" slot="start" class="menu-icon"></ion-icon>
-            <ion-label>Arabic</ion-label>
-          </ion-item>
-          <ion-list slot="content">
-            <ion-item routerLink="/arabic/lessons" routerDirection="forward">
-              <ion-icon name="book-outline" slot="start" class="menu-icon"></ion-icon>
-              Lessons
-            </ion-item>
-            <ion-item routerLink="/arabic/roots" routerDirection="forward">
-              <ion-icon name="leaf-outline" slot="start" class="menu-icon"></ion-icon>
-              Roots
-            </ion-item>
-            <ion-item routerLink="/arabic/lexicon" routerDirection="forward">
-              <ion-icon name="library-outline" slot="start" class="menu-icon"></ion-icon>
-              Lexicon
-            </ion-item>
-            <ion-item routerLink="/arabic/memory" routerDirection="forward">
-              <ion-icon name="sparkles-outline" slot="start" class="menu-icon"></ion-icon>
-              Memory
-            </ion-item>
-          </ion-list>
-        </ion-accordion>
-
-        <ion-accordion value="worldview">
-          <ion-item slot="header">
-            <ion-icon name="globe-outline" slot="start" class="menu-icon"></ion-icon>
-            <ion-label>Worldview</ion-label>
-          </ion-item>
-          <ion-list slot="content">
-            <ion-item routerLink="/worldview/lessons" routerDirection="forward">
-              <ion-icon name="globe-outline" slot="start" class="menu-icon"></ion-icon>
-              Lessons
-            </ion-item>
-          </ion-list>
-        </ion-accordion>
-
-        <ion-accordion value="crossref">
-          <ion-item slot="header">
-            <ion-icon name="git-compare-outline" slot="start" class="menu-icon"></ion-icon>
-            <ion-label>Crossref</ion-label>
-          </ion-item>
-          <ion-list slot="content">
-            <ion-item routerLink="/crossref" routerDirection="forward">
-              <ion-icon name="git-compare-outline" slot="start" class="menu-icon"></ion-icon>
-              Cross References
-            </ion-item>
-          </ion-list>
-        </ion-accordion>
-
-        <ion-accordion value="podcast">
-          <ion-item slot="header">
-            <ion-icon name="mic-outline" slot="start" class="menu-icon"></ion-icon>
-            <ion-label>Podcast</ion-label>
-          </ion-item>
-          <ion-list slot="content">
-            <ion-item routerLink="/podcast" routerDirection="forward">
-              <ion-icon name="mic-outline" slot="start" class="menu-icon"></ion-icon>
-              Episodes
-            </ion-item>
-          </ion-list>
-        </ion-accordion>
-
-        <ion-accordion value="planner">
-          <ion-item slot="header">
-            <ion-icon name="calendar-outline" slot="start" class="menu-icon"></ion-icon>
-            <ion-label>Planner</ion-label>
-          </ion-item>
-          <ion-list slot="content">
-            <ion-item routerLink="/planner" routerDirection="forward">
-              <ion-icon name="calendar-outline" slot="start" class="menu-icon"></ion-icon>
-              Weekly Plan
-            </ion-item>
-          </ion-list>
-        </ion-accordion>
-      </ion-accordion-group>
-    </ion-content>
-  </ion-menu>
-
+  <app-menu></app-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
