--- a/apps/app-k-maps/src/app/core/menu/app-menu.component.html
+++ b/apps/app-k-maps/src/app/core/menu/app-menu.component.html
@@ -16,6 +16,7 @@
         <ion-item slot="header">
           <ion-icon name="book-outline" slot="start" class="menu-icon"></ion-icon>
           <ion-label>Arabic</ion-label>
+          <ion-icon name="chevron-forward" slot="end" class="accordion-icon"></ion-icon>
         </ion-item>
         <ion-list slot="content">
           <ion-item routerLink="/arabic/lessons" routerDirection="forward">
@@ -41,6 +42,7 @@
         <ion-item slot="header">
           <ion-icon name="globe-outline" slot="start" class="menu-icon"></ion-icon>
           <ion-label>Worldview</ion-label>
+          <ion-icon name="chevron-forward" slot="end" class="accordion-icon"></ion-icon>
         </ion-item>
         <ion-list slot="content">
           <ion-item routerLink="/worldview/lessons" routerDirection="forward">
@@ -54,6 +56,7 @@
         <ion-item slot="header">
           <ion-icon name="git-compare-outline" slot="start" class="menu-icon"></ion-icon>
           <ion-label>Crossref</ion-label>
+          <ion-icon name="chevron-forward" slot="end" class="accordion-icon"></ion-icon>
         </ion-item>
         <ion-list slot="content">
           <ion-item routerLink="/crossref" routerDirection="forward">
@@ -67,6 +70,7 @@
         <ion-item slot="header">
           <ion-icon name="mic-outline" slot="start" class="menu-icon"></ion-icon>
           <ion-label>Podcast</ion-label>
+          <ion-icon name="chevron-forward" slot="end" class="accordion-icon"></ion-icon>
         </ion-item>
         <ion-list slot="content">
           <ion-item routerLink="/podcast" routerDirection="forward">
@@ -80,6 +84,7 @@
         <ion-item slot="header">
           <ion-icon name="calendar-outline" slot="start" class="menu-icon"></ion-icon>
           <ion-label>Planner</ion-label>
+          <ion-icon name="chevron-forward" slot="end" class="accordion-icon"></ion-icon>
         </ion-item>
         <ion-list slot="content">
           <ion-item routerLink="/planner" routerDirection="forward">
