--- a/apps/app-k-maps/src/app/core/menu/app-menu.component.html
+++ b/apps/app-k-maps/src/app/core/menu/app-menu.component.html
@@ -93,6 +93,14 @@
           </ion-item>
         </ion-menu-toggle>
       </div>
+
+      <ion-menu-toggle autoHide="true">
+        <ion-item routerLink="/settings" routerDirection="root" detail="false">
+          <ion-icon name="settings-outline" slot="start" class="menu-icon"></ion-icon>
+          Settings
+        </ion-item>
+      </ion-menu-toggle>
+
     </ion-list>
   </ion-content>
 </ion-menu>
