--- a/apps/app-k-maps/src/global.scss
+++ b/apps/app-k-maps/src/global.scss
@@ -35,3 +35,60 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("assets/fonts/poppins-latin-400-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("assets/fonts/poppins-latin-600-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("assets/fonts/poppins-latin-700-normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Uthmanic Hafs";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("assets/fonts/UthmanicHafs_V22.woff2") format("woff2");
+}
+
+:root {
+  --app-font-size: 16px;
+  --app-font-ar-size: 32px;
+  --app-font-sans: "Poppins", "Helvetica Neue", Arial, sans-serif;
+  --app-font-ar: "Uthmanic Hafs", "Scheherazade New", serif;
+}
+
+body {
+  font-family: var(--app-font-sans);
+}
+
+:lang(ar),
+[lang="ar"],
+.arabic,
+[dir="rtl"] {
+  font-family: var(--app-font-ar);
+  font-size: var(--app-font-ar-size, var(--app-font-size));
+}
+
+
+html {
+  font-size: var(--app-font-size, 16px);
+}
