--- a/apps/app-k-maps/src/app/app.component.scss
+++ b/apps/app-k-maps/src/app/app.component.scss
@@ -34,8 +34,9 @@ ion-accordion ion-item[slot="header"] ion-icon {
 }
 
 .global-home-button {
+  pointer-events: none;
   position: fixed;
-  top: calc(env(safe-area-inset-top, 0px) - 2px); /* ⬆️ move more up */
+  top: calc(env(safe-area-inset-top, 0px) 2px); /* ⬆️ move more up */
   right: calc(env(safe-area-inset-right, 0px) + 16px);
   z-index: 1001;
 
