--- a/apps/app-k-maps/src/app/features/arabic/roots/root-cards/root-cards.component.html
+++ b/apps/app-k-maps/src/app/features/arabic/roots/root-cards/root-cards.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ root }} <span *ngIf="family">({{ family }})</span></ion-title>
+    <ion-title class="root-card-header">{{ root }} <span *ngIf="family">({{ family }})</span></ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="close()">Close</ion-button>
     </ion-buttons>
