--- a/apps/app-k-maps/src/app/features/arabic/roots/root-cards/root-cards.component.scss
+++ b/apps/app-k-maps/src/app/features/arabic/roots/root-cards/root-cards.component.scss
@@ -20,3 +20,12 @@
   color: #ffd34d;
   white-space: pre-line;
 }
+
+
+.root-card-header {
+  font-family: var(--app-font-ar);
+  font-size: var(--app-font-ar-size);
+  color: #effafd;
+  white-space: pre-line;
+  text-shadow: 0 0 10px rgba(122, 255, 226, 0.45);
+}
